syntax = "proto3";

package pb;

option go_package = "./pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  int64 created = 5;
  int64 updated = 6;
}

message GetUserRequest {
  string id = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message DeleteUserResponse {
  string id = 1;
}

message SigninRequest {
  string email = 1;
  string password = 2;
}

message SigninResponse {
  User user = 1;
  string token = 2;
}

service AuthService {
  rpc Signup(User) returns (User);
  rpc SignIn(SigninRequest) returns (SigninResponse);
  rpc Update(User) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(ListUsersRequest) returns (stream User);
  rpc DeleteUser(GetUserRequest) returns (DeleteUserResponse);
}